# FEM

./: .gitignore  CMakeLists.txt  README.md
src/Assemble/: CMakeLists.txt  Domain.cpp  Domain.h  GRSystem.cc  GRSystem.hpp  Object.cc  Object.hpp  ObjectIterator.h  Player.cc  Player.h  Simulator.cc  Simulator.h  System.cc  System.cpp  System.h  TimeStepper.cc  TimeStepper.cpp  TimeStepper.h
src/Assemble/Assembler/: Assembler.cc  Assembler.hpp  GRAssembler.cc  GRAssembler.hpp  GeneralAssembler.cc  GeneralAssembler.hpp  PDAssembler.cc  PDAssembler.hpp
src/Assemble/Data/: ClothData.cc  ClothData.hpp  CoarseGridBasedData.cc  CoarseGridBasedData.hpp  CurveData.cc  CurveData.hpp  Data.cc  Data.hpp  GridBasedData.hpp  GridData.cc  GridData.hpp  GridMeshData.hpp  InitUtils.cc  InitUtils.hpp  MassSpringData.cc  MassSpringData.hpp  PDClothData.cc  PDClothData.hpp  ReconstructedMeshData.cc  ReconstructedMeshData.hpp  ReducedDataUtils.cc  ReducedDataUtils.hpp  SampledData.cc  SampledData.hpp  SpringMassData.cc  SpringMassData.hpp  TriangleData.cc  TriangleData.hpp
src/Assemble/Domain/: TreeDomain.cpp  TreeDomain.h
src/Assemble/Objects/: Cloth.cc  Cloth.hpp  CoarseGrid.cc  Curve.cc  Curve.hpp  Grid.cc  Grid.hpp  IPObjects.cc  MassSpring.cc  MassSpring.hpp  PDIPCObjects.cc  PDObjects.cc  ReconstructedMesh.cc  ReconstructedMesh.hpp  Triangle.hpp
src/Assemble/System/: GRSystem.cc  GRSystem.hpp  GeneralSystem.cc  GeneralSystem.hpp  System.cc  System.hpp
src/Assemble/Test/: CMakeLists.txt
src/Assemble/TimeStepper/: BFSStepper.cc  BFSStepper.cpp  BFSStepper.h  BFSStepper.hpp  DomainBFSStepper.cpp  DomainBFSStepper.h  DomainDFSStepper.cpp  DomainDFSStepper.h  GRStepper.cc  GRStepper.hpp  IPC.cc  IPC.hpp  IncrementalPotential.cc  IncrementalPotential.hpp  PDIPC.cc  PDIPC.hpp  PositionBasedPDIPC.cc  PositionBasedPDIPC.hpp  ProjectiveDynamics.cc  ProjectiveDynamics.hpp  SystemStepper.cc  SystemStepper.cpp  SystemStepper.h  SystemStepper.hpp  TimeStepper.cc  TimeStepper.hpp
src/Geometry/: CMakeLists.txt  Shape.h
src/Geometry/ClothShape/: ClothShape.cpp  ClothShape.h
src/Geometry/Collision/: CollisionInfo.cc  CollisionInfo.hpp  CollisionInterface.cc  CollisionInterface.hpp  CollisionUtility.cc  CollisionUtility.cpp  CollisionUtility.h  GeometryComputation.cc  GeometryComputation.h
src/Geometry/CurveShape/: CurveShape.cpp  CurveShape.h
src/Geometry/Embedding/: PlanarEmbedding.cc  PlanarEmbedding.hpp
src/Geometry/FixedShape/: FixedShape.hpp  Rectangle.cc
src/Geometry/Render/: CurveShape.hpp  GridBasedShape.hpp  GridShape.hpp  LeafShape.hpp  RenderInterface.hpp  RenderShape.hpp  RenderShapeAdapter.hpp  TreeTrunkShape.hpp
src/Geometry/RenderShape/: RenderShape.cc  RenderShape.h
src/Geometry/SpatialQuery/: SpatialHashing.hpp
src/Geometry/Test/: CCDTest.cc  CMakeLists.txt  CubicSolverTest.cc  CurveShapeTest.cpp  DistanceFunctionTest.cc  PDIPCTest.cc  SpatialHashingTest.cc  VoxelizerTest.cc  VoxelizerVisTest.cc
src/Geometry/TreeShape/: TreeTrunkShape.cpp  TreeTrunkShape.h
src/Geometry/Voxelizer/: Voxelizer.cc  Voxelizer.hpp
src/Numeric/: CMakeLists.txt  README.md  Target.cc  Target.cpp  Target.h
src/Numeric/Constraint/: Constraint.cc  Constraint.cpp  Constraint.h
src/Numeric/Integrator/: DomainIntegrator.cpp  DomainIntegrator.h  FastProjection.cpp  FastProjection.h  IPC.cc  IPC.cpp  IPC.h  IncrementalPotential.cc  IncrementalPotential.cpp  IncrementalPotential.h  Integrator.cc  Integrator.cpp  Integrator.h
src/Numeric/Optimizer/: Newton.cc  Newton.cpp  Newton.h  Optimizer.cc  Optimizer.h
src/Numeric/Test/: CMakeLists.txt  ConstraintTest.cpp
src/Physics/: CMakeLists.txt  DecomposedObject.cc  DecomposedObject.h  DecomposedObject.hpp  Domain.cpp  Domain.h  FixedObject.hpp  InertialSystem.cpp  InertialSystem.h  Object.cc  Object.cpp  Object.h  Object.hpp  ObjectCollection.h  Physics.hpp  PhysicsSystem.cpp  PhysicsSystem.h  ReducedObject.cc  ReducedObject.hpp  SampledObject.cc  SampledObject.hpp  System.cpp  System.h
src/Physics/Benchmark/: CMakeLists.txt  PDEnergyBenchmark.cc
src/Physics/Cloth/: Cloth.cpp  Cloth.h
src/Physics/Coordinate/: Coordinate.hpp  CoordinateAdapter.hpp  CoordinateImplementation.hpp  GridCoordinate.hpp
src/Physics/Curve/: Curve.cpp  Curve.h  ExtensibleCurve.cpp  ExtensibleCurve.h  InextensibleCurve.cpp  InextensibleCurve.h
src/Physics/EnergyModel/: ClothEnergyModel.cc  ClothEnergyModel.hpp  CurveEnergyModel.cc  CurveEnergyModel.hpp  EnergyModel.hpp  EnergyModelAdapter.hpp  EnergyModelImplementation.hpp  FixtureEnergyModel.cc  FixtureEnergyModel.hpp  GridEnergyModel.cc  GridEnergyModel.hpp  MassSpringEnergyModel.cc  MassSpringEnergyModel.hpp  NullEnergyModel.hpp  ReducedEnergyModel.hpp
src/Physics/ExternalForce/: ExternalForce.cpp  ExternalForce.h  ExternalForce.hpp  ExternalForceContainer.hpp  ExternalForceFactory.hpp  SampledObjectFixForce.hpp  SampledObjectFixtureForce.hpp  SampledObjectGravity.h  SampledObjectGravity.hpp
src/Physics/MassModel/: MassModel.cc  MassModel.hpp  MassModelAdapter.hpp  MassModelImplementation.hpp
src/Physics/Model/: ClothPhysics.hpp  CurvePhysics.hpp  GridBasedPhysics.hpp  GridPhysics.hpp  MassSpringModel.hpp
src/Physics/Object/: AffineDecomposedTree.cc  AffineDecomposedTree.h  Cloth.cc  Cloth.cpp  Cloth.h  Cloth.hpp  Curve.cc  Curve.cpp  Curve.h  Curve.hpp  DecomposedTree.cc  DecomposedTree.h  ReducedBezierCurve.cc  ReducedBezierCurve.h  ReducedBezierSurface.cc  ReducedBezierSurface.cpp  ReducedBezierSurface.h  ReducedLeaf.cc  ReducedLeaf.h  ReducedObjectUtils.cc  ReducedObjectUtils.hpp  ReducedTreeTrunk.cc  ReducedTreeTrunk.cpp  ReducedTreeTrunk.h  TreeTrunk.cc  TreeTrunk.cpp  TreeTrunk.h
src/Physics/RigidBody/: RigidBody.cpp  (+1 more)
src/Render/: CMakeLists.txt
src/Simulator/: CMakeLists.txt  Player.cc  Player.cpp  Player.h  Simulator.cc  Simulator.cpp  Simulator.h
src/Util/: CMakeLists.txt  EigenAll.cc  EigenAll.cpp  EigenAll.h  GeometryUtil.cc  GeometryUtil.h  GeometryUtil.hpp  JsonUtil.cc  JsonUtil.cpp  JsonUtil.h  Object.cc  Object.hpp  Parallel.hpp  Pattern.h  Timer.h  TopoUtil.cc  TopoUtil.hpp
(+262 files in other folders)
